Inline comment margin spacing fix

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -359,6 +359,7 @@
 
 .page__comments-form {
   padding: 1em;
+  margin-bottom: 60px;
   background: $lighter-gray;
   transition: $global-transition;
 
